Small OpenAPI fixes
